fix .alignfull koros style when .has-sidebar

--- a/src/scss/modules/_blocks.scss
+++ b/src/scss/modules/_blocks.scss
@@ -16,6 +16,10 @@
   @include breakpoint('l') {
     .alignfull {
       margin-left: calc(78.5% - 50vw);
+
+      + .hds-koros {
+        margin-left: calc(78.5% - 50vw);
+      }
     }
   }
 
